@@ -121,3 +121,47 @@ Step 10: IMPORT JAVA FX Library (this will be required for every project)
     ]
 }
 ```  
+
+Step 11: SETUP JAVA VM RUNTIME (this will be required for every project)
+- Make sure you have your App.java file open and active on screen:
+  1. At the top left corner of the screen click on "Run"
+  2. Then click on "Add confifguration"
+  3. This will bring up a "launch.json" file
+  4. We will need to add the following string:
+```  
+"vmArgs": "--module-path /path/to/your/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml",
+
+in my case:
+"vmArgs": "--module-path /Users/marco/java/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml",
+```  
+  
+  5. You will need to edit, inside the "Configurations" section, the area where you see "mainClass": "App" 
+  6. ("App" could be different if you changed Main class name)
+  7. We will need to edit here from: 
+```
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "Test_b89987b8"
+        }
+```
+
+  To:
+```
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "vmArgs": "--module-path /Users/marco/java/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml",
+            "mainClass": "App",
+            "projectName": "Test_b89987b8"
+        }
+```
+
+Step 12: You can now try and run your app
+
+
+
+
